# solana-sft-marketplace

./: README.md
contract/: Anchor.toml  package-lock.json  package.json
contract/migrations/: deploy.js
contract/programs/airdrop/: Cargo.toml
contract/programs/airdrop/src/: lib.rs
contract/scripts/: index.ts
contract/tests/: airdrop.ts
frontend/: config-overrides.js  package.json
frontend/src/: App.css  App.tsx  index.scss  index.tsx
frontend/src/config/: dev.ts  index.ts  main.ts
frontend/src/constants/IDL/: index.json
frontend/src/helpers/sol/: connection.ts  index.ts
frontend/src/layouts/: layout.tsx
frontend/src/pages/: list.tsx  marketplace.tsx
frontend/src/utils/: helper.ts
